fix firefox bugs: - faulty getTotalLength() on path, by providing an optional length property to the icon object - display: table overflow by putting the current city on top of the others

--- a/app/src/styles/views/CityView.less
+++ b/app/src/styles/views/CityView.less
@@ -9,6 +9,7 @@
   left: 0;
 
   display: table;
+  table-layout: fixed;
   overflow: hidden;
 
   width: 100%;
